fix: status|speed up button too cramped up (#3534)
* fix: status|speed up button too cramped up

* Update src/components/transactions/TxSummary/styles.module.css


---------

--- a/src/components/transactions/TxSummary/styles.module.css
+++ b/src/components/transactions/TxSummary/styles.module.css
@@ -39,6 +39,10 @@
   opacity: 0.4;
 }
 
+.gridContainer .status {
+  margin-right: var(--space-3);
+}
+
 .date {
   color: var(--color-text-secondary);
 }
@@ -56,5 +60,9 @@
 
   .date {
     width: 100%;
+  }
+
+  .status {
+    margin: 0 var(--space-1);
   }
 }
